feat: add soap-request.xml and calculatorserviceimpl.java files

--- a/soap-service/pom.xml
+++ b/soap-service/pom.xml
@@ -57,6 +57,14 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.6.2</version>
+                <configuration>
+                    <mainClass>com.example.soap.server.CalculatorPublisher</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
